apps/templates/provisioner/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: provisioner
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: provisioner
                port:
                  number: 80
